--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ executing==2.1.0
 filelock==3.16.1
 fonttools==4.54.1
 fsspec==2024.9.0
+gdown==5.2.0
 idna==3.10
 ipykernel==6.29.5
 ipython==8.28.0
@@ -45,6 +46,7 @@ pure_eval==0.2.3
 pydicom==3.0.1
 Pygments==2.18.0
 pyparsing==3.1.4
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
@@ -57,6 +59,7 @@ tcia_utils==2.4.7
 tenacity==9.0.0
 torch==2.2.2
 tornado==6.4.1
+tqdm==4.66.5
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.2
