--- a/requirements.txt
+++ b/requirements.txt
@@ -16,14 +16,18 @@ filelock==3.16.1
 fonttools==4.54.1
 fsspec==2024.9.0
 gdown==5.2.0
+h5py==3.12.1
 idna==3.10
+imageio==2.36.0
 ipykernel==6.29.5
 ipython==8.28.0
 jedi==0.19.1
 Jinja2==3.1.4
+joblib==1.4.2
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.7
+lazy_loader==0.4
 MarkupSafe==3.0.1
 matplotlib==3.9.2
 matplotlib-inline==0.1.7
@@ -31,7 +35,9 @@ mpmath==1.3.0
 nest-asyncio==1.6.0
 networkx==3.4.1
 numpy==1.24.3
+opencv-python==4.8.0.76
 openpyxl==3.1.5
+openslide-python==1.4.1
 packaging==24.1
 pandas==2.2.3
 parso==0.8.4
@@ -51,12 +57,17 @@ python-dateutil==2.9.0.post0
 pytz==2024.2
 pyzmq==26.2.0
 requests==2.32.3
+scikit-image==0.24.0
+scikit-learn==1.5.2
+scipy==1.14.1
 six==1.16.0
 soupsieve==2.6
 stack-data==0.6.3
 sympy==1.13.3
 tcia_utils==2.4.7
 tenacity==9.0.0
+threadpoolctl==3.5.0
+tifffile==2024.9.20
 torch==2.2.2
 tornado==6.4.1
 tqdm==4.66.5
